--- a/HomeApp/Client/Client/_Imports.razor
+++ b/HomeApp/Client/Client/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.JSInterop
 @using HomeApp.Client
 @using HomeApp.Client.Shared
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization 
