--- a/HomeApp/Client/Client/Pages/Index.razor
+++ b/HomeApp/Client/Client/Pages/Index.razor
@@ -1,5 +1,14 @@
 ﻿@page "/"
 
+<AuthorizeView Roles="Admin">
+    <Authorized>
+        You are Authorized, @context.User.Identity.Name 
+    </Authorized>
+    <NotAuthorized>
+        Not authorized
+    </NotAuthorized>
+</AuthorizeView>
+
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
