--- a/HomeApp/Client/Client/_Imports.razor
+++ b/HomeApp/Client/Client/_Imports.razor
@@ -7,5 +7,6 @@
 @using Microsoft.JSInterop
 @using HomeApp.Client
 @using HomeApp.Client.Shared
+@using HomeApp.Client.Repository
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization 
