Fix openid connect implicit flow with server jwt validation

--- a/HomeApp/Client/HomeApp.Client/_Imports.razor
+++ b/HomeApp/Client/HomeApp.Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using HomeApp.Client
 @using HomeApp.Client.Shared
+@using HomeApp.Client.Repository
+@using HomeApp.Client.Services
