--- a/HomeApp/Client/HomeApp.Client/Pages/FetchData.razor
+++ b/HomeApp/Client/HomeApp.Client/Pages/FetchData.razor
@@ -1,5 +1,14 @@
 @page "/fetchdata"
-@inject HttpClient Http
+
+@using HomeApp.Shared
+
+@inject IWeatherForcastRepository repository
+@inject HttpClient client
+@using System.Text.Json;
+@using System.Text.Json.Serialization;
+@using System.Net.Http.Headers;
+
+@inject HomeApp.Client.Services.IStorage storage
 
 <h1>Weather forecast</h1>
 
@@ -35,21 +44,44 @@ else
 }
 
 @code {
-    private WeatherForecast[] forecasts;
+    private IEnumerable<WeatherForecast> forecasts;
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        string key = "Microsoft.AspNetCore.Components.WebAssembly.Authentication.CachedAuthSettings";
+        var authSettings = await storage.Get<CachedAuthSettings>(key);
+        var user = await storage.Get<CognitoUser>(authSettings?.OIDCUserKey);
+
+
+        client.DefaultRequestHeaders.Authorization = new AuthenticationHeaderValue("Bearer", user.id_token);
+
+        var auth = client.DefaultRequestHeaders.Authorization;
+
+        forecasts = await repository.GetAllAsync();
     }
 
-    public class WeatherForecast
+    public class CachedAuthSettings
     {
-        public DateTime Date { get; set; }
+        public string authority { get; set; }
+        public string metadataUrl { get; set; }
+        public string client_id { get; set; }
+        public string[] defaultScopes { get; set; }
+        public string redirect_uri { get; set; }
+        public string post_logout_redirect_uri { get; set; }
+        public string response_type { get; set; }
+        public string response_mode { get; set; }
+        public string scope { get; set; }
 
-        public int TemperatureC { get; set; }
+        public string OIDCUserKey => $"oidc.user:{authority}:{client_id}";
+    }
 
-        public string Summary { get; set; }
-
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+    public class CognitoUser
+    {
+        public string id_token { get; set; }
+        public string access_token { get; set; }
+        public string refresh_token { get; set; }
+        public string token_type { get; set; }
+        public string scope { get; set; }
+        public int expires_at { get; set; }
     }
 }
