--- a/HomeApp/Client/HomeApp.Client/Pages/FetchData.razor
+++ b/HomeApp/Client/HomeApp.Client/Pages/FetchData.razor
@@ -1,14 +1,9 @@
 @page "/fetchdata"
+@attribute [Authorize]
 
 @using HomeApp.Shared
 
 @inject IWeatherForcastRepository repository
-@inject HttpClient client
-@using System.Text.Json;
-@using System.Text.Json.Serialization;
-@using System.Net.Http.Headers;
-
-@inject HomeApp.Client.Services.IStorage storage
 
 <h1>Weather forecast</h1>
 
