--- a/HomeApp.Map/HomeApp.Map.Client/HomeApp.Client/_Imports.razor
+++ b/HomeApp.Map/HomeApp.Map.Client/HomeApp.Client/_Imports.razor
@@ -8,6 +8,6 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using HomeApp.Client
-@using HomeApp.Client.Shared
+@using HomeApp.Map.Client.Shared
 @using HomeApp.Client.Repository
 @using HomeApp.Client.Services
