--- a/HomeCloud.Home/HomeCloud.Home.Client/Shared/NavMenu.razor
+++ b/HomeCloud.Home/HomeCloud.Home.Client/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@using HomeCloud.Client.Common.Model
+
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">HomeCloud.Home.Client</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -7,21 +9,15 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
+        @foreach (var navItem in navigationItems)
+        {
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="@navItem.Link" 
+                         Match="@(navigationItems.First() == navItem ? NavLinkMatch.All : NavLinkMatch.Prefix)">
+                    <span class="oi @navItem.Icon" aria-hidden="true"></span> @navItem.Title
+                </NavLink>
+            </li>
+        }
     </ul>
 </div>
 
@@ -34,4 +30,11 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
+
+    private IEnumerable<NavigationItem> navigationItems = new List<NavigationItem>
+    {
+        new NavigationItem { Icon = "oi-home", Link = string.Empty, Title = "Home" },
+        new NavigationItem { Icon = "oi-plus", Link = "counter", Title = "Counter" },
+        new NavigationItem { Icon = "oi-list-rich", Link = "fetchdata", Title = "Fetch data" }
+    };
 }
