--- a/HomeCloud.Home/HomeCloud.Home.Client/Shared/MainLayout.razor
+++ b/HomeCloud.Home/HomeCloud.Home.Client/Shared/MainLayout.razor
@@ -1,5 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
+@using HomeCloud.Client.Common.Model
+@using HomeCloud.Map.Client
+
 <div class="sidebar">
     <NavMenu />
 </div>
