--- a/HomeCloud.Home/HomeCloud.Home.Client/Shared/NavMenu.razor
+++ b/HomeCloud.Home/HomeCloud.Home.Client/Shared/NavMenu.razor
@@ -7,17 +7,39 @@
     </button>
 </div>
 
+<!--
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
-        @foreach (var navItem in navigationItems)
+        @foreach (var navItem in NavigationItems)
         {
             <li class="nav-item px-3">
-                <NavLink class="nav-link" href="@navItem.Link" 
-                         Match="@(navigationItems.First() == navItem ? NavLinkMatch.All : NavLinkMatch.Prefix)">
+                <NavLink class="nav-link" href="@navItem.Link"
+                         Match="@(NavigationItems.First() == navItem ? NavLinkMatch.All : NavLinkMatch.Prefix)">
                     <span class="oi @navItem.Icon" aria-hidden="true"></span> @navItem.Title
                 </NavLink>
             </li>
         }
+    </ul>
+</div>
+-->
+
+<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
+    <ul class="nav flex-column">
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Home
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="counter">
+                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchdata">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            </NavLink>
+        </li>
     </ul>
 </div>
 
@@ -31,10 +53,10 @@
         collapseNavMenu = !collapseNavMenu;
     }
 
-    private IEnumerable<NavigationItem> navigationItems = new List<NavigationItem>
-    {
-        new NavigationItem { Icon = "oi-home", Link = string.Empty, Title = "Home" },
-        new NavigationItem { Icon = "oi-plus", Link = "counter", Title = "Counter" },
-        new NavigationItem { Icon = "oi-list-rich", Link = "fetchdata", Title = "Fetch data" }
-    };
+    IEnumerable<NavigationItem> NavigationItems = new List<NavigationItem>
+        {
+                new NavigationItem { Icon = "oi-home", Link = string.Empty, Title = "Home" },
+                new NavigationItem { Icon = "oi-plus", Link = "counter", Title = "Counter" },
+                new NavigationItem { Icon = "oi-list-rich", Link = "fetchdata", Title = "Fetch data" }
+            };
 }
