--- a/HomeCloud.Map/HomeCloud.Map.Client/_Imports.razor
+++ b/HomeCloud.Map/HomeCloud.Map.Client/_Imports.razor
@@ -3,7 +3,5 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
-@using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using HomeCloud.Home.Client
-@using HomeCloud.Home.Client.Shared
+@using HomeCloud.Map.Client.Repository
