--- a/HomeCloud.Map/HomeCloud.Map.Client/Pages/Counter.razor
+++ b/HomeCloud.Map/HomeCloud.Map.Client/Pages/Counter.razor
@@ -1,4 +1,4 @@
-﻿@page "/counter"
+﻿@page "/app/map/counter"
 
 <h1>Counter</h1>
 
@@ -13,4 +13,6 @@
     {
         currentCount++;
     }
+
+    public static string page = "counter";
 }
