--- a/HomeCloud.Home/HomeCloud.Home.Client/Shared/NavMenu.razor
+++ b/HomeCloud.Home/HomeCloud.Home.Client/Shared/NavMenu.razor
@@ -7,7 +7,6 @@
     </button>
 </div>
 
-<!--
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         @foreach (var navItem in NavigationItems)
@@ -21,27 +20,6 @@
         }
     </ul>
 </div>
--->
-
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
-    </ul>
-</div>
 
 @code {
     private bool collapseNavMenu = true;
@@ -53,10 +31,5 @@
         collapseNavMenu = !collapseNavMenu;
     }
 
-    IEnumerable<NavigationItem> NavigationItems = new List<NavigationItem>
-        {
-                new NavigationItem { Icon = "oi-home", Link = string.Empty, Title = "Home" },
-                new NavigationItem { Icon = "oi-plus", Link = "counter", Title = "Counter" },
-                new NavigationItem { Icon = "oi-list-rich", Link = "fetchdata", Title = "Fetch data" }
-            };
+    [Parameter] public IEnumerable<NavigationItem> NavigationItems { get; set; }
 }
