Navigate back to home screen

--- a/HomeCloud.Home/HomeCloud.Home.Client/Shared/MainLayout.razor
+++ b/HomeCloud.Home/HomeCloud.Home.Client/Shared/MainLayout.razor
@@ -8,7 +8,7 @@
 @if (isInApp)
 {
     <div class="sidebar">
-        <NavMenu NavigationItems="Apps.MapApp.App.NavigationItems" />
+        <NavMenu App="Apps.MapApp.App" />
     </div>
 }
 
