--- a/HomeCloud.Home/HomeCloud.Home.Client/_Imports.razor
+++ b/HomeCloud.Home/HomeCloud.Home.Client/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.JSInterop
 @using HomeCloud.Home.Client
 @using HomeCloud.Home.Client.Shared
+@using HomeCloud.Client.Common.Components
