initialize Book App

--- a/HomeCloud.Home/HomeCloud.Home.Client/App.razor
+++ b/HomeCloud.Home/HomeCloud.Home.Client/App.razor
@@ -28,6 +28,7 @@
 @code {
     private IEnumerable<Assembly> assemblies = new List<Assembly>
     {
-        typeof(HomeCloud.Map.Client.Startup).Assembly
+        typeof(HomeCloud.Map.Client.Startup).Assembly,
+        typeof(HomeCloud.Book.Client.Startup).Assembly
     };
 }
