--- a/src/frontend/HomeCloud.Maps.Client/Pages/Index.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Index.razor
@@ -4,6 +4,6 @@
 
 Welcome to your new app.
 
-<p>Deployment test</p>
+<p>Deployment test wieso funktioniert est nicht</p>
 
 <SurveyPrompt Title="How is Blazor working for you?" />
