--- a/src/frontend/HomeCloud.Maps.Client/Pages/Index.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Index.razor
@@ -2,8 +2,7 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
-
-<p>Deployment test wieso funktioniert est nicht</p>
+<p>Dieses Mal muss es funktionieren</p>
+<p>Dieses mal wirklich</p>
 
 <SurveyPrompt Title="How is Blazor working for you?" />
