--- a/src/frontend/HomeCloud.Maps.Client/Pages/Index.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Index.razor
@@ -4,5 +4,6 @@
 
 <p>Dieses Mal muss es funktionieren</p>
 <p>Dieses mal wirklich</p>
+<p>jetzt aber</p>
 
 <SurveyPrompt Title="How is Blazor working for you?" />
