--- a/src/frontend/HomeCloud.Maps.Client/Shared/MainLayout.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Shared/MainLayout.razor
@@ -6,8 +6,8 @@
     </div>
 
     <div class="main">
-        <div class="top-row px-4">
-            <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+        <div class="top-row px-4 auth">
+            <LoginDisplay />
         </div>
 
         <div class="content px-4">
