--- a/src/frontend/HomeCloud.Maps.Client/_Imports.razor
+++ b/src/frontend/HomeCloud.Maps.Client/_Imports.razor
@@ -10,3 +10,4 @@
 @using HomeCloud.Maps.Client
 @using HomeCloud.Maps.Client.Pages
 @using HomeCloud.Maps.Client.Shared
+@using HomeCloud.Maps.Client.Services
