--- a/src/frontend/HomeCloud.Maps.Client/Shared/NavMenu.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Shared/NavMenu.razor
@@ -24,6 +24,13 @@
                 </NavLink>
             </li>
         </AuthorizeView>
+        <AuthorizeView>
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="settings">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Settings
+                </NavLink>
+            </li>
+        </AuthorizeView>
     </ul>
 </div>
 
