insert Settings into MongoDb

--- a/src/frontend/HomeCloud.Maps.Client/Pages/FetchData.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/FetchData.razor
@@ -1,6 +1,7 @@
 ﻿@page "/fetchdata"
 @using HomeCloud.Maps.Shared
 @inject IHttpService httpService
+@attribute [Authorize]
 
 <h1>Weather forecast</h1>
 
