--- a/src/frontend/HomeCloud.Maps.Client/_Imports.razor
+++ b/src/frontend/HomeCloud.Maps.Client/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -10,4 +11,5 @@
 @using HomeCloud.Maps.Client
 @using HomeCloud.Maps.Client.Pages
 @using HomeCloud.Maps.Client.Shared
+@using HomeCloud.Maps.Shared
 @using HomeCloud.Maps.Client.Services
