--- a/src/frontend/HomeCloud.Maps.Client/Shared/NavMenu.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Shared/NavMenu.razor
@@ -1,46 +1,77 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">HomeCloud.Maps</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</div>
+@using System.Linq
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <AuthorizeView>
-            <li class="nav-item px-3">
-                <NavLink class="nav-link" href="fetchdata">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-                </NavLink>
-            </li>
-        </AuthorizeView>
-        <AuthorizeView>
-            <li class="nav-item px-3">
-                <NavLink class="nav-link" href="settings">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Settings
-                </NavLink>
-            </li>
-        </AuthorizeView>
-    </ul>
-</div>
+<MudNavMenu Class="mudblazor-navmenu">
+    <div class="docs-nav-fader"></div>
 
-@code {
-    private bool collapseNavMenu = true;
+    @*<MudNavGroup Title="Getting Started"
+                 Icon="@Icons.Material.Filled.School"
+                 Expanded="@(_section == "getting-started")"
+                 ExpandIcon="@Icons.Material.Filled.ExpandMore" Style="margin-top: 40px;">
+        @foreach (var link in MenuService.GettingStarted)
+        {
+            <MudNavLink Href="@link.Href">@link.Title</MudNavLink>
+        }
+    </MudNavGroup>*@
 
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    @*COMPONENTS*@
+    @*<MudNavGroup Title="Components"
+                 Icon="@Icons.Material.Filled.Dashboard"
+                 Expanded="@(_section == "components")"
+                 ExpandIcon="@Icons.Material.Filled.ExpandMore">
+        @foreach (var item in MenuService.Components)
+        {
+            if (item.IsNavGroup)
+            {
+                <MudNavGroup Title="@item.Name" Expanded="@(IsSubGroupExpanded(item))" ExpandIcon="@Icons.Material.Filled.ExpandMore">
+                    @foreach (var subItem in item.GroupItems.Elements)
+                    {
+                        string href = $"components/{subItem.Link}";
+                        <MudNavLink Href="@href">@subItem.Name</MudNavLink>
+                    }
+                </MudNavGroup>
+            }
+            else
+            {
+                string href = $"components/{item.Link}";
+                <MudNavLink Href="@href">@item.Name</MudNavLink>
+            }
+        }
+    </MudNavGroup>*@
 
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
-}
+    @*API*@
+    <MudNavGroup Title="API"
+                 Icon="@Icons.Material.Filled.Api"
+                 ExpandIcon="@Icons.Material.Filled.ExpandMore">
+    </MudNavGroup>
+
+    @*FEATURES*@
+    <MudNavGroup Title="Features"
+                 Icon="@Icons.Material.Filled.DeveloperBoard"
+                 ExpandIcon="@Icons.Material.Filled.ExpandMore">
+    </MudNavGroup>
+
+    @*CUSTOMIZATION*@
+    @*<MudNavGroup Title="Customization"
+                 Icon="@Icons.Material.Filled.Handyman"
+                 Expanded="@(_section == "customization")"
+                 ExpandIcon="@Icons.Material.Filled.ExpandMore">
+        <MudNavLink Href="customization/default-theme">Default Theme</MudNavLink>
+        <MudNavGroup Title="Theming" Expanded="true" ExpandIcon="@Icons.Material.Filled.ExpandMore">
+            @foreach (var link in MenuService.Customization)
+            {
+                <MudNavLink Href="@link.Href">@link.Title</MudNavLink>
+            }
+        </MudNavGroup>
+    </MudNavGroup>*@
+
+    @*ABOUT*@
+    @*<MudNavGroup Title="About" Icon="@Icons.Custom.Brands.MudBlazor" Expanded="@(_section=="project")" ExpandIcon="@Icons.Material.Filled.ExpandMore">
+        @foreach (var link in MenuService.About)
+        {
+            <MudNavLink Href="@link.Href">@link.Title</MudNavLink>
+        }
+
+    </MudNavGroup>*@
+</MudNavMenu>
+<div class="docs-nav-filler"></div>
+
