--- a/src/frontend/HomeCloud.Maps.Client/Shared/NavMenu.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Shared/NavMenu.razor
@@ -1,77 +1,6 @@
-@using System.Linq
-
 <MudNavMenu Class="mudblazor-navmenu">
-    <div class="docs-nav-fader"></div>
-
-    @*<MudNavGroup Title="Getting Started"
-                 Icon="@Icons.Material.Filled.School"
-                 Expanded="@(_section == "getting-started")"
-                 ExpandIcon="@Icons.Material.Filled.ExpandMore" Style="margin-top: 40px;">
-        @foreach (var link in MenuService.GettingStarted)
-        {
-            <MudNavLink Href="@link.Href">@link.Title</MudNavLink>
-        }
-    </MudNavGroup>*@
-
-    @*COMPONENTS*@
-    @*<MudNavGroup Title="Components"
-                 Icon="@Icons.Material.Filled.Dashboard"
-                 Expanded="@(_section == "components")"
-                 ExpandIcon="@Icons.Material.Filled.ExpandMore">
-        @foreach (var item in MenuService.Components)
-        {
-            if (item.IsNavGroup)
-            {
-                <MudNavGroup Title="@item.Name" Expanded="@(IsSubGroupExpanded(item))" ExpandIcon="@Icons.Material.Filled.ExpandMore">
-                    @foreach (var subItem in item.GroupItems.Elements)
-                    {
-                        string href = $"components/{subItem.Link}";
-                        <MudNavLink Href="@href">@subItem.Name</MudNavLink>
-                    }
-                </MudNavGroup>
-            }
-            else
-            {
-                string href = $"components/{item.Link}";
-                <MudNavLink Href="@href">@item.Name</MudNavLink>
-            }
-        }
-    </MudNavGroup>*@
-
-    @*API*@
-    <MudNavGroup Title="API"
-                 Icon="@Icons.Material.Filled.Api"
-                 ExpandIcon="@Icons.Material.Filled.ExpandMore">
-    </MudNavGroup>
-
-    @*FEATURES*@
-    <MudNavGroup Title="Features"
-                 Icon="@Icons.Material.Filled.DeveloperBoard"
-                 ExpandIcon="@Icons.Material.Filled.ExpandMore">
-    </MudNavGroup>
-
-    @*CUSTOMIZATION*@
-    @*<MudNavGroup Title="Customization"
-                 Icon="@Icons.Material.Filled.Handyman"
-                 Expanded="@(_section == "customization")"
-                 ExpandIcon="@Icons.Material.Filled.ExpandMore">
-        <MudNavLink Href="customization/default-theme">Default Theme</MudNavLink>
-        <MudNavGroup Title="Theming" Expanded="true" ExpandIcon="@Icons.Material.Filled.ExpandMore">
-            @foreach (var link in MenuService.Customization)
-            {
-                <MudNavLink Href="@link.Href">@link.Title</MudNavLink>
-            }
-        </MudNavGroup>
-    </MudNavGroup>*@
-
-    @*ABOUT*@
-    @*<MudNavGroup Title="About" Icon="@Icons.Custom.Brands.MudBlazor" Expanded="@(_section=="project")" ExpandIcon="@Icons.Material.Filled.ExpandMore">
-        @foreach (var link in MenuService.About)
-        {
-            <MudNavLink Href="@link.Href">@link.Title</MudNavLink>
-        }
-
-    </MudNavGroup>*@
+    <MudNavLink Href="/">Home</MudNavLink>
+    <MudNavLink Href="/counter">Counter</MudNavLink>
+    <MudNavLink Href="/fetchdata">Fetch Data</MudNavLink>
+    <MudNavLink Href="/settings">Settings</MudNavLink>
 </MudNavMenu>
-<div class="docs-nav-filler"></div>
-
