add google login

--- a/src/frontend/HomeCloud.Maps.Client/Shared/MainLayout.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Shared/MainLayout.razor
@@ -13,7 +13,7 @@
         <MudAppBarSpacer />
         <MudAppBarSpacer />
         <MudHidden Breakpoint="Breakpoint.MdAndUp" Invert="true">
-            <MudIconButton Icon="@Icons.Material.Filled.Login" Color="Color.Inherit" Edge="Edge.Start"/>
+            <LoginDisplay />
             <MudDivider Vertical="true" FlexItem="true" DividerType="DividerType.Middle" Class="mx-4 my-5" />
             <MudTooltip Text="GitHub repository">
                 <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Link="https://github.com/DavidStahl97/HomeCloud" Target="_blank" />
