fix userid from tour

--- a/src/frontend/HomeCloud.Maps.Client/Shared/NavMenu.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Shared/NavMenu.razor
@@ -1,6 +1,7 @@
 <MudNavMenu Class="mudblazor-navmenu">
     <MudNavLink Href="/">Home</MudNavLink>
     <AuthorizeView>
+        <MudNavLink Href="/tours">Tours</MudNavLink>
         <MudNavLink Href="/settings">Settings</MudNavLink>
     </AuthorizeView>
 </MudNavMenu>
