--- a/src/frontend/HomeCloud.Maps.Client/_Imports.razor
+++ b/src/frontend/HomeCloud.Maps.Client/_Imports.razor
@@ -11,6 +11,7 @@
 @using HomeCloud.Maps.Client
 @using HomeCloud.Maps.Client.Pages
 @using HomeCloud.Maps.Client.Shared
+@using HomeCloud.Maps.Shared.Tours
 @using HomeCloud.Maps.Shared
 @using HomeCloud.Maps.Client.Services
 @using MudBlazor
