--- a/src/frontend/HomeCloud.Maps.Client/Pages/Tours.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Tours.razor
@@ -3,13 +3,16 @@
 @attribute [Authorize]
 
 @inject IHttpService httpService
+@inject NavigationManager Navigation
 
 <h3>Tours</h3>
 
 @foreach (var tour in tours)
 {
-    <MudPaper Elevation="3">
-        <MudText>@tour.Name</MudText>
+    <MudPaper Elevation="3" Style="margin: 10px">
+        <MudButton Variant="Variant.Text" Style="margin: 10px" OnClick="@(() => OnTourClicked(tour.TourId))">
+            @tour.Name
+        </MudButton>
     </MudPaper>
 }
 
@@ -21,5 +24,10 @@
         var result = await httpService.GetAsync<List<TourInfoDto>>("api/tours");
 
         tours = result.Response;
+    }
+
+    private void OnTourClicked(string tourId)
+    {
+        Navigation.NavigateTo($"/tours/{tourId}");
     }
 }
