--- a/src/frontend/HomeCloud.Maps.Client/Pages/Tour.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Tour.razor
@@ -1,18 +1,53 @@
 ﻿@page "/tours/{TourId}"
 
+@using BlazorLeaflet
+@using BlazorLeaflet.Models
+@using System.Drawing
+
 @attribute [Authorize]
 
-<h3></h3>
+@inject IHttpService httpService
+@inject IJSRuntime jsRuntime
+
+<h3>@tour.TourInfo.Name</h3>
+
+<div style="height: 700px; width: 1200px;">
+    <LeafletMap Map="_map" InitialPosition="_startAt" InitialZoom="4.8f" />
+</div>
 
 @code {
 
-    private TourInfoDto tour = new TourInfoDto();
+    private TourDto tour = new TourDto();
+
+    private Map _map;
+
+    private float Lat { get; set; } = 47.5574007f;
+
+    private float Lng { get; set; } = 16.3918687f;
+
+    private PointF _startAt = new PointF(50.433216f, 8.497126f);
 
     [Parameter]
     public string TourId { get; set; }
 
-    protected override Task OnInitializedAsync()
+    protected override async Task OnInitializedAsync()
     {
-        return base.OnInitializedAsync();
+        var result = await httpService.GetAsync<TourDto>($"api/tours/{TourId}");
+        tour = result.Response;
+
+        _map = new Map(jsRuntime);
+
+        _map.Layers.Add(new TileLayer
+        {
+            UrlTemplate = "https://a.tile.opentopomap.org/{z}/{x}/{y}.png",
+            Attribution = "&copy; <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors",
+        });
+
+        var polygons = new RouteDrawer().Draw(tour.Route.Positions);
+
+        foreach (var polygon in polygons)
+        {
+            _map.Layers.Add(polygon);
+        }
     }
 }
