--- a/src/frontend/HomeCloud.Maps.Client/Pages/Index.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Index.razor
@@ -22,3 +22,24 @@
 <div style="height: 700px; width: 1200px;">
     <LeafletMap Map="_map" InitialPosition="_startAt" InitialZoom="4.8f" />
 </div>
+
+@code {
+    private Map _map;
+
+    private float Lat { get; set; } = 47.5574007f;
+
+    private float Lng { get; set; } = 16.3918687f;
+
+    private PointF _startAt = new PointF(50.433216f, 8.497126f);
+
+    protected override void OnInitialized()
+    {
+        _map = new Map(jsRuntime);
+
+        _map.Layers.Add(new TileLayer
+        {
+            UrlTemplate = "https://a.tile.opentopomap.org/{z}/{x}/{y}.png",
+            Attribution = "&copy; <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors",
+        });
+    }
+}
