--- a/src/frontend/HomeCloud.Maps.Client/Shared/NavMenu.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Shared/NavMenu.razor
@@ -2,6 +2,7 @@
     <MudNavLink Href="/">Home</MudNavLink>
     <AuthorizeView>
         <MudNavLink Href="/tours">Tours</MudNavLink>
+        <MudNavLink Href="/virus">Virus</MudNavLink>
         <MudNavLink Href="/settings">Settings</MudNavLink>
     </AuthorizeView>
 </MudNavMenu>
