fix TourInfo Resource name

--- a/src/frontend/HomeCloud.Maps.Client/Pages/Tours.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Tours.razor
@@ -21,7 +21,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var result = await httpService.GetAsync<List<TourInfoDto>>("api/tours");
+        var result = await httpService.GetAsync<List<TourInfoDto>>("api/TourInfos");
 
         tours = result.Response;
     }
