--- a/src/frontend/HomeCloud.Maps.Client/Pages/Tour.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Tour.razor
@@ -42,7 +42,7 @@
             Attribution = "&copy; <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors",
         });
 
-        var result = await httpService.GetAsync<TourDto>($"api/Tours/{TourId}");
+        var result = await httpService.GetAsync<TourDto>($"api/TourInfos/{TourId}");
         tour = result.Response;
 
         var polygons = new RouteDrawer().Draw(tour.Route.Positions);
