--- a/src/frontend/HomeCloud.Maps.Client/_Imports.razor
+++ b/src/frontend/HomeCloud.Maps.Client/_Imports.razor
@@ -8,10 +8,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using HomeCloud.Maps.Client.WebApi
 @using HomeCloud.Maps.Client
 @using HomeCloud.Maps.Client.Pages
 @using HomeCloud.Maps.Client.Shared
-@using HomeCloud.Maps.Shared.Tours
-@using HomeCloud.Maps.Shared
 @using HomeCloud.Maps.Client.Services
 @using MudBlazor
