--- a/src/frontend/HomeCloud.Maps.Client/Pages/Settings.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Settings.razor
@@ -1,9 +1,8 @@
 ﻿@page "/settings"
 
-@using HomeCloud.Maps.Shared
 @attribute [Authorize]
 
-@inject IHttpService httpService
+@inject IWebAPIClient Client
 
 <h3>Settings</h3>
 
@@ -26,17 +25,16 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var result = await httpService.GetAsync<UserSettingsDto>("api/UserSettings");
-        userSettings = result.Response;
+        userSettings = await Client.SendAsync(x => x.UserSettings2Async());
     }
 
     private async Task OnSubmitAsync()
     {
-        await httpService.PostAsync("api/UserSettings", userSettings);
+        await Client.SendAsync(x => x.UserSettingsAsync(userSettings));
     }
 
     private async Task OnUpdateKommotTourAsync()
     {
-        await httpService.PatchAsync("api/Komoot", komootToursRequest);
+        await Client.SendAsync(x => x.KomootAsync(komootToursRequest));
     }
 }
