--- a/src/frontend/HomeCloud.Maps.Client/Pages/Tour.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Tour.razor
@@ -42,7 +42,7 @@
             Attribution = "&copy; <a href=\"https://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors",
         });
 
-        var tour = await Client.SendAsync(x => x.TourInfosAsync(TourId));
+        var tour = await Client.SendAsync(x => x.GetTourInfosByIdAsync(TourId));
 
         var polygons = new RouteDrawer().Draw(tour.Route.Positions);
 
