create Services classes

--- a/src/frontend/HomeCloud.Maps.Client/Pages/Settings.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Pages/Settings.razor
@@ -35,6 +35,6 @@
 
     private async Task OnUpdateKommotTourAsync()
     {
-        await Client.SendAsync(x => x.PatchKomootRoutesAsync(komootToursRequest));
+        await Client.SendAsync(x => x.PostToursAsync(komootToursRequest));
     }
 }
