--- a/src/frontend/HomeCloud.Maps.Client/_Imports.razor
+++ b/src/frontend/HomeCloud.Maps.Client/_Imports.razor
@@ -12,5 +12,6 @@
 @using HomeCloud.Maps.Client
 @using HomeCloud.Maps.Client.Pages
 @using HomeCloud.Maps.Client.Shared
+@using HomeCloud.Maps.Client.Components
 @using HomeCloud.Maps.Client.Services
 @using MudBlazor
