--- a/src/frontend/HomeCloud.Maps.Client/Shared/MainLayout.razor
+++ b/src/frontend/HomeCloud.Maps.Client/Shared/MainLayout.razor
@@ -29,9 +29,9 @@
         <NavMenu />
     </MudDrawer>
     <MudMainContent Class="mudblazor-main-content">
-        <div style="margin: 50px">
+        <MudPaper Elevation="3" Class="pa-5 ma-7">
             @Body
-        </div>
+        </MudPaper>
         <MudScrollToTop TopOffset="400">
             <MudFab Icon="@Icons.Material.Filled.KeyboardArrowUp" Color="Color.Primary" />
         </MudScrollToTop>
